--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -116,6 +116,7 @@ $(function() {
             }
           } else {
             jqXHR.previewContainer.uploadedImageUrls.push(serverResponse.url); //will be at position given by uploadsCompleted
+            thisImagesWindow.find('.image-preview').css('background-image','url("/api/image/display/temp/'+serverResponse.url+'")');
             thisImagesWindow.attr('urlpos', jqXHR.previewContainer.uploadsCompleted++); //so we can figure out which url to remove when that window's delete button is hit
             if (jqXHR.previewContainer.uploadsStarted - jqXHR.previewContainer.uploadsCancelled == jqXHR.previewContainer.uploadsCompleted) {
               let submitbutton = thisImagesWindow.closest(".contentForm").find('button[type="submit"]');
