boost notification checks

--- a/views/asyncPage.handlebars
+++ b/views/asyncPage.handlebars
@@ -21,7 +21,7 @@
               </div>
             </div>
             <div class="post-content ">
-              <img src="/images/loading.gif" style="display: block; margin: 0 auto;">
+              <img src="/images/loading.gif" style="display: block; margin: 0 auto;max-width:100%">
             </div>
           </div>
         </div>
