force graphs to x-axis label by week

--- a/views/partials/timeGraph.handlebars
+++ b/views/partials/timeGraph.handlebars
@@ -24,6 +24,7 @@
                       type: 'time',
                       distribution: 'linear',
                       time: {
+                        unit: "week",
                         tooltipFormat: "MMMM Do, YYYY",
                         displayFormats: {day: "MMMM Do"}
                       }
