--- a/public/css/style.css
+++ b/public/css/style.css
@@ -996,11 +996,11 @@ hr {
   content: "";
   position: absolute;
   z-index: 1;
-  bottom: 3rem;
+  top: 9.5rem;
   left: 0;
   pointer-events: none;
   width: 100%;
-  height: 1rem;
+  height: 1.5rem;
 }
 
 .show-more,
