--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -94,6 +94,14 @@ $(function() {
   $('body').on('click','.replyEmojiWindow>.add-emoji', function() {
     pasteHtmlAtCaret($(this).closest("#replyForm").find('.editable-comment-content.medium-editor-element'), '<span class="emoji"> ' + event.target.innerHTML + '</span>');
   })
+  $('body').on('click', '.fullBoostList', function(e) {
+    e.preventDefault();
+    e.stopPropagation();
+    $(this).addClass('fullBoostListClicked');
+    $('body').on('click',e=>{
+      $(this).removeClass('fullBoostListClicked');
+    })
+  })
   $('body').on('click', '.content-warning-show-more', function() {
     var state = $(this).attr("data-state");
     if (state == "contracted") {
