--- a/public/css/style.css
+++ b/public/css/style.css
@@ -334,6 +334,29 @@ h1, h2, h3, h4, h5, h6 {
   padding-right: 0px;
 }
 
+.fullBoostList {
+  margin:3px;
+  text-decoration:underline;
+  cursor: pointer;
+  position:relative;
+}
+
+.fullBoostListClicked:after{
+  content: attr(data-content);
+  white-space: pre-line;
+  position: absolute;
+  left: 0;
+  top: 24px;
+  min-width: 200px;
+  border: 1px #aaaaaa solid;
+  border-radius: 10px;
+  background-color: #ffffcc;
+  padding: 12px;
+  color: #000000;
+  font-size: 14px;
+  z-index: 1;
+}
+
 hr {
   height: 1px;
   border: 0;
