--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -78,13 +78,16 @@ $(function() {
     var state = $(this).attr("data-state");
     if (state == "contracted") {
       var h = $(this).prev(".abbreviated-content").css('height','100%').height();
-      $(this).prev(".abbreviated-content").css('height','125px');
+      $(this).prev(".abbreviated-content").css('height','7rem');
       $(this).prev(".abbreviated-content").removeClass("abbreviated-content").addClass("post-content").animate({height:h},200);
-      $(this).attr("data-state","expanded").css("margin-top", "0.25rem");
+      $(this).attr("data-state","expanded");
     }
     else {
-      $(this).prev(".post-content").addClass("abbreviated-content").removeClass("post-content").animate({height:"125px"},200);
-      $(this).attr("data-state","contracted").css("margin-top", "0.25rem");
+      var pC = $(this).prev(".post-content");
+      pC.addClass("abbreviated-content").removeClass("post-content").animate({height:"7rem"},200);
+      var scroll = pC.offset().top;
+      $("html, body").animate({ scrollTop: (scroll-200)+"px" },200); //-200 to roughly account for the navbar covering up the very top of the screen
+      $(this).attr("data-state","contracted");
     }
     var text = $(this).text();
     $(this).text(
