--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -67,12 +67,17 @@ $(function() {
     commentsContainer = $(this).closest(".comment").find(".replyContainer");
     commentsContainer.slideToggle("fast", function(){
       if (commentsContainer.is(':visible')){
+        if(commentsContainer.height() > $(window).height()){
+          var scroll = commentsContainer.offset().top+commentsContainer.height()-$(window).height();
+          $("html, body").animate({ scrollTop: scroll+"px" },200);
+        }        
         var post = $(this).closest('.commentContainer');
         $.post("/api/notification/update-by-subject/"+post.attr("data-post-id"), function(data){
           $("#notificationsContainer").load( "/api/notification/display" );
         })
       }
     })
+    
   })
   $('body').on('click', '.show-more', function() {
     var state = $(this).attr("data-state");
